refactor: changed the JAVA version to 8 instead of 11
downgraded java version from 11 to 8 since not all bec computers have
jdk 11